# app/serializers/schedule_report_serializer.rb
@@ -1,0 +1,6 @@
+class ScheduleReportSerializer < ActiveModel::Serializer
+  attributes  :email,
+              :frequency_day,
+              :frequency_interval,
+              :start_date
+end
