# swagger/v1/swagger.json
@@ -180,60 +180,6 @@
         }
       }
     },
-    "/authentication": {
-      "post": {
-        "summary": "Retrieves a token",
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "name": "email",
-            "in": "query",
-            "type": "string"
-          },
-          {
-            "name": "password",
-            "in": "query",
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "user found",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "auth_token": {
-                  "type": "string"
-                },
-                "email": {
-                  "type": "string"
-                }
-              },
-              "required": [
-                "auth_token",
-                "email"
-              ]
-            }
-          },
-          "401": {
-            "description": "user not found",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "errors": {
-                  "type": "string"
-                }
-              },
-              "required": [
-                "errors"
-              ]
-            }
-          }
-        }
-      }
-    },
     "/api/v1/things/{thing_name}/battery_levels": {
       "get": {
         "summary": "Retrieves all battery levels from a thing",
@@ -378,6 +324,245 @@
           },
           "401": {
             "description": "Unauthorized"
+          }
+        }
+      }
+    },
+    "/api/v1/locations": {
+      "post": {
+        "summary": "create location",
+        "tags": [
+          "Locations"
+        ],
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "Authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "input",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "location": {
+                  "type": "object",
+                  "properties": {
+                    "name": {
+                      "type": "string"
+                    },
+                    "address": {
+                      "type": "string"
+                    },
+                    "latitude": {
+                      "type": "float"
+                    },
+                    "longitude": {
+                      "type": "float"
+                    }
+                  }
+                },
+                "country_state_city": {
+                  "type": "object",
+                  "properties": {
+                    "country": {
+                      "type": "string"
+                    },
+                    "state": {
+                      "type": "string"
+                    },
+                    "city": {
+                      "type": "string"
+                    }
+                  }
+                },
+                "schedule_billing": {
+                  "type": "object",
+                  "properties": {
+                    "stratum": {
+                      "type": "integer"
+                    },
+                    "basic_charge": {
+                      "type": "float"
+                    },
+                    "top_limit": {
+                      "type": "float"
+                    },
+                    "basic_price": {
+                      "type": "float"
+                    },
+                    "extra_price": {
+                      "type": "float"
+                    },
+                    "billing_frequency": {
+                      "type": "integer"
+                    },
+                    "billing_period": {
+                      "type": "string"
+                    },
+                    "cut_day": {
+                      "type": "integer"
+                    },
+                    "start_day": {
+                      "type": "integer"
+                    },
+                    "start_month": {
+                      "type": "integer"
+                    },
+                    "start_year": {
+                      "type": "integer"
+                    }
+                  }
+                },
+                "schedule_report": {
+                  "type": "object",
+                  "properties": {
+                    "email": {
+                      "type": "string"
+                    },
+                    "frequency_day": {
+                      "type": "integer"
+                    },
+                    "frequency_interval": {
+                      "type": "string"
+                    },
+                    "start_day": {
+                      "type": "integer"
+                    },
+                    "start_month": {
+                      "type": "integer"
+                    },
+                    "start_year": {
+                      "type": "integer"
+                    }
+                  }
+                }
+              },
+              "required": [
+                "location",
+                "country_state_city",
+                "schedule_billing",
+                "schedule_report"
+              ]
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "location created",
+            "schema": {
+              "type": "object",
+              "required": [
+                "name",
+                "address",
+                "latitude",
+                "longitude",
+                "country",
+                "state",
+                "city",
+                "schedule_billing",
+                "schedule_report"
+              ],
+              "properties": {
+                "type": "object",
+                "properties": {
+                  "name": {
+                    "type": "string"
+                  },
+                  "address": {
+                    "type": "string"
+                  },
+                  "latitude": {
+                    "type": "float"
+                  },
+                  "longitude": {
+                    "type": "float"
+                  },
+                  "country": {
+                    "type": "string"
+                  },
+                  "state": {
+                    "type": "string"
+                  },
+                  "city": {
+                    "type": "string"
+                  },
+                  "schedule_billing": {
+                    "type": "object",
+                    "properties": {
+                      "stratum": {
+                        "type": "integer"
+                      },
+                      "basic_charge": {
+                        "type": "float"
+                      },
+                      "top_limit": {
+                        "type": "float"
+                      },
+                      "basic_price": {
+                        "type": "float"
+                      },
+                      "extra_price": {
+                        "type": "float"
+                      },
+                      "billing_frequency": {
+                        "type": "integer"
+                      },
+                      "billing_period": {
+                        "type": "string"
+                      },
+                      "cut_day": {
+                        "type": "integer"
+                      },
+                      "start_date": {
+                        "type": "string"
+                      }
+                    }
+                  },
+                  "schedule_report": {
+                    "type": "object",
+                    "properties": {
+                      "email": {
+                        "type": "string"
+                      },
+                      "frequency_day": {
+                        "type": "integer"
+                      },
+                      "frequency_interval": {
+                        "type": "string"
+                      },
+                      "start_date": {
+                        "type": "string"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "thing not found",
+            "schema": {
+              "type": "object",
+              "required": [
+                "errors"
+              ],
+              "properties": {
+                "type": "object",
+                "properties": {
+                  "errors": {
+                    "type": "string"
+                  }
+                }
+              }
+            }
           }
         }
       }
